--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@fortawesome/angular-fontawesome": "^3.0.0",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@tailwindcss/postcss": "^4.1.11",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
